--- a/Model OLS.ipynb
+++ b/Model OLS.ipynb
@@ -17,6 +17,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d5f4875b-d9bd-4111-9959-39ca34eff988",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## DUCAT ML Class 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -279,7 +295,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "DUCAT ML Class 3",
+   "notebookName": "Model OLS",
    "widgets": {}
   },
   "language_info": {
