--- a/Pipeline 02.ipynb
+++ b/Pipeline 02.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "057e4a99-89a1-4d66-acb0-83e0f2842dc0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## DUCAT ML Class 4 - Framingham Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -279,7 +295,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "DUCAT ML Class 4",
+   "notebookName": "Pipeline 02",
    "widgets": {}
   },
   "language_info": {
