--- a/STATS Part 1.ipynb
+++ b/STATS Part 1.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "Part import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "import pandas as pd\n",
@@ -192,7 +192,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "STATS 2026-01-14 12_14_53",
+   "notebookName": "STATS Part 1",
    "widgets": {}
   },
   "kernelspec": {
