--- a/Model OLS.ipynb
+++ b/Model OLS.ipynb
@@ -33,6 +33,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "544fa45d-3410-480b-885e-8ef409e41e42",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### First Order Linear Equation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -51,22 +67,6 @@
    "outputs": [],
    "source": [
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "544fa45d-3410-480b-885e-8ef409e41e42",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### First Order Linear Equation"
    ]
   },
   {
@@ -212,7 +212,7 @@
     }
    },
    "source": [
-    "# OLS"
+    "# Causal Model - OLS"
    ]
   },
   {
@@ -266,13 +266,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "485bfed4-db79-42f2-846b-6990bb017ae5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Here’s a **short, clear explanation of each term** in the OLS regression output, written in **interview- and exam-friendly language**:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Model Overview**\n",
+    "\n",
+    "* **Dep. Variable (y):** The target variable being predicted.\n",
+    "* **Model (OLS):** Ordinary Least Squares, a method that minimizes squared prediction errors.\n",
+    "* **Method (Least Squares):** Technique used to estimate coefficients.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Model Fit Metrics**\n",
+    "\n",
+    "* **R-squared (0.203):** About **20.3%** of the variation in `y` is explained by the model.\n",
+    "* **Adj. R-squared (0.201):** R-squared adjusted for number of predictors; useful for model comparison.\n",
+    "* **F-statistic (126.7):** Tests whether the model as a whole is statistically significant.\n",
+    "* **Prob (F-statistic) (9.35e-50):** Very small value → the model is **overall significant**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Model Size & Complexity**\n",
+    "\n",
+    "* **No. Observations (1000):** Number of data points used.\n",
+    "* **Df Model (2):** Number of predictors (`x1`, `x2`).\n",
+    "* **Df Residuals (997):** Degrees of freedom left after fitting the model.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Information Criteria**\n",
+    "\n",
+    "* **Log-Likelihood (-1443.5):** Measure of model fit; higher (less negative) is better.\n",
+    "* **AIC (2893):** Metric balancing model fit and complexity; lower is better.\n",
+    "* **BIC (2908):** Similar to AIC but penalizes complexity more strongly.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Coefficients Table**\n",
+    "\n",
+    "* **coef:** Estimated impact of each variable on `y`.\n",
+    "* **std err:** Uncertainty in the coefficient estimate.\n",
+    "* **t:** Test statistic for whether the coefficient is different from zero.\n",
+    "* **P>|t|:** p-value for individual variable significance.\n",
+    "* **[0.025, 0.975]:** 95% confidence interval for the coefficient.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Coefficient Interpretation**\n",
+    "\n",
+    "* **const:** Expected value of `y` when all predictors are zero (not significant here).\n",
+    "* **x1:** Negative effect on `y`, but **not statistically significant** at 5% level.\n",
+    "* **x2:** Strong positive effect on `y`, **highly statistically significant**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Covariance Type**\n",
+    "\n",
+    "* **nonrobust:** Assumes constant variance of errors (homoscedasticity).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **One-Line Summary**\n",
+    "\n",
+    "> The model is statistically significant overall, but only `x2` is a strong and reliable predictor of `y`.\n",
+    "\n",
+    "If you want, I can also explain:\n",
+    "\n",
+    "* how to **tell if assumptions are violated**\n",
+    "* what to **say in an interview in 30 seconds**\n",
+    "* how this output changes with **multicollinearity or heteroscedasticity**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "485bfed4-db79-42f2-846b-6990bb017ae5",
+     "nuid": "e2de78b3-a8a6-43e0-9d81-fc1cf8bfb46f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
