--- a/Pandas Part 1.ipynb
+++ b/Pandas Part 1.ipynb
@@ -812,7 +812,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "5_Pandas_DataFrame",
+   "notebookName": "Pandas Part 1",
    "widgets": {}
   },
   "colab": {
