--- a/Pipeline 01.ipynb
+++ b/Pipeline 01.ipynb
@@ -13,7 +13,7 @@
     }
    },
    "source": [
-    "## Iris Dataset"
+    "## Random Forest Classifier, Cross Val, Hyperparam Tuning - Iris Dataset"
    ]
   },
   {
