--- a/Pipeline 02.ipynb
+++ b/Pipeline 02.ipynb
@@ -13,7 +13,9 @@
     }
    },
    "source": [
-    "## DUCAT ML Class 4 - Framingham Data"
+    "##  kNN Classifier, Confusion Matrix- Framingham Data\n",
+    "\n",
+    "### DUCAT ML Class 4"
    ]
   },
   {
