--- a/STATS Part 1.ipynb
+++ b/STATS Part 1.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "921a74e0-413a-4d40-86ca-20200e0099e2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Statistics For Data Science\n",
+    "[Link](https://www.geeksforgeeks.org/data-science/statistics-for-data-science/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -143,7 +160,7 @@
     "})\n",
     "\n",
     "# 3. Calculate Cumulative Sum of Values\n",
-    "df_summary['Total Value Occurred'] = df_summary['Value'] * df_summary['Counts']\n",
+    "df_summary['Total Value Occurred'] = df_summary['Value'] * df_summary['Counts (Frequency)']\n",
     "df_summary['Cumulative Sum of Total Value'] = df_summary['Total Value Occurred'].cumsum()\n",
     "\n",
     "# 4. Calculate Cumulative Sum of Counts\n",
