--- a/Model OLS.ipynb
+++ b/Model OLS.ipynb
@@ -351,11 +351,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "03693c15-28d6-4154-afc7-8e04bba99492",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# sklearn\n",
+    "[Link](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e2de78b3-a8a6-43e0-9d81-fc1cf8bfb46f",
      "showTitle": false,
@@ -364,7 +384,38 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
+    "# y = 1 * x_0 + 2 * x_1 + 3\n",
+    "y = np.dot(X, np.array([1, 2])) + 3\n",
+    "reg = LinearRegression().fit(X, y)\n",
+    "reg.score(X, y)\n",
+    "# 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "56d7521b-6a95-4754-8fe4-145245b33c99",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "reg.coef_, reg.intercept_, reg.predict(np.array([[3, 5]]))\n",
+    "# array([1., 2.]), np.float64(3.0), array([16.])"
+   ]
   }
  ],
  "metadata": {
