new updates in Jan

--- a/1 Numpy.ipynb
+++ b/1 Numpy.ipynb
@@ -1062,7 +1062,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Numpy",
+   "notebookName": "1 Numpy",
    "widgets": {}
   },
   "colab": {
