--- a/1 Pandas Part 1.ipynb
+++ b/1 Pandas Part 1.ipynb
@@ -695,7 +695,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Pandas Part 1",
+   "notebookName": "1 Pandas Part 1",
    "widgets": {}
   },
   "colab": {
