--- a/1 Pandas Part 2.ipynb
+++ b/1 Pandas Part 2.ipynb
@@ -1161,7 +1161,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Pandas Part 2",
+   "notebookName": "1 Pandas Part 2",
    "widgets": {}
   },
   "colab": {
