--- a/1 Pandas Part 3.ipynb
+++ b/1 Pandas Part 3.ipynb
@@ -2331,7 +2331,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Pandas Part 3",
+   "notebookName": "1 Pandas Part 3",
    "widgets": {}
   },
   "colab": {
