--- a/2 Probability Distribution.ipynb
+++ b/2 Probability Distribution.ipynb
@@ -71,7 +71,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Probability Distribution",
+   "notebookName": "2 Probability Distribution",
    "widgets": {}
   },
   "language_info": {
