--- a/2 STATS Part 1.ipynb
+++ b/2 STATS Part 1.ipynb
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "Part import numpy as np\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "import pandas as pd\n",
@@ -100,7 +100,6 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "collapsed": true,
      "inputWidgets": {},
      "nuid": "050771fc-6d35-4b97-a4df-68ba0dbbc2b4",
      "showTitle": false,
@@ -160,14 +159,32 @@
     "})\n",
     "\n",
     "# 3. Calculate Cumulative Sum of Values\n",
-    "df_summary['Total Value Occurred'] = df_summary['Value'] * df_summary['Counts (Frequency)']\n",
+    "df_summary['Total Value Occurred'] = df_summary['Value'] * df_summary['Counts']\n",
     "df_summary['Cumulative Sum of Total Value'] = df_summary['Total Value Occurred'].cumsum()\n",
     "\n",
     "# 4. Calculate Cumulative Sum of Counts\n",
     "df_summary['Cumulative Sum of Counts'] = df_summary['Counts'].cumsum()\n",
     "\n",
+    "df_summary.rename(columns={'Counts': 'Counts (Frequency)'}, inplace=True)\n",
+    "\n",
     "# 5. Display the final DataFrame\n",
-    "print(df_summary)"
+    "df_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "205fdf7a-b3af-46fe-b34c-508d448b1cdd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "![image_1769444943966.png](./image_1769444943966.png \"image_1769444943966.png\")"
    ]
   },
   {
@@ -187,7 +204,54 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# given a series, calculate Range, IQR, Q1, Median, Q3, lf, uf, outliers\n",
+    "# also give position of Q1, Q2, Q3\n",
+    "def get_range_iqr_outliers(series):\n",
+    "  n = len(series) # +1 ?\n",
+    "  q1_position = int(n * 0.25)\n",
+    "  q2_position = int(n * 0.5)\n",
+    "  q3_position = int(n * 0.75)\n",
+    "  q1 = np.percentile(series, 25)\n",
+    "  q2 = np.percentile(series, 50)\n",
+    "  q3 = np.percentile(series, 75)\n",
+    "  iqr = q3 - q1\n",
+    "  lf = q1 - 1.5 * iqr\n",
+    "  uf = q3 + 1.5 * iqr\n",
+    "  outliers = series[(series < lf) | (series > uf)]\n",
+    "\n",
+    "  # plot boxplot for the same\n",
+    "  plt.boxplot(series)\n",
+    "  plt.title(\"Box Plot\")\n",
+    "  plt.ylabel(\"Values\")\n",
+    "  plt.show()\n",
+    "\n",
+    "  return q1, q2, q3, iqr, lf, uf, outliers\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e7918edf-049e-4644-949c-e31916d3f221",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "series_1 = pd.Series([2,2,4,4,6,6,8,10,50])\n",
+    "get_range_iqr_outliers(series_1)"
+   ]
   }
  ],
  "metadata": {
@@ -209,7 +273,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "STATS Part 1",
+   "notebookName": "2 STATS Part 1",
    "widgets": {}
   },
   "kernelspec": {
