--- a/2 STATS Part 2.ipynb
+++ b/2 STATS Part 2.ipynb
@@ -792,7 +792,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "STATS Part 2",
+   "notebookName": "2 STATS Part 2",
    "widgets": {}
   },
   "colab": {
