--- a/Model OLS.ipynb
+++ b/Model OLS.ipynb
@@ -13,23 +13,8 @@
     }
    },
    "source": [
-    "## Implementing Gradient Descent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "d5f4875b-d9bd-4111-9959-39ca34eff988",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## DUCAT ML Class 3"
+    "## Implementing Gradient Descent\n",
+    "**DUCAT ML Class 3**"
    ]
   },
   {
@@ -46,6 +31,22 @@
    },
    "source": [
     "### First Order Linear Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9c60bd2c-b254-4d54-bb0c-57771236cf07",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "y = b0 + b1x1 + e"
    ]
   },
   {
@@ -216,6 +217,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a7729598-7a1d-4b39-a51f-f27b55089e01",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "y = b1x1 + e"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -368,6 +385,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "82c55306-b418-46b5-8273-4901c868bb22",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "y = b0 + b1x1 + b2x2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -415,6 +448,277 @@
    "source": [
     "reg.coef_, reg.intercept_, reg.predict(np.array([[3, 5]]))\n",
     "# array([1., 2.]), np.float64(3.0), array([16.])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "54ef4d70-e339-4d0b-a2cd-084fb7032da3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Matrix method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "19ea3ce5-04ed-4378-a82b-4c7287a6028a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "y = b0 + b1x1 + b2x2 + e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7217c8ed-bac6-427e-861d-fadce7f840d9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Sample data\n",
+    "X = np.array([\n",
+    "    [1, 2],\n",
+    "    [2, 3],\n",
+    "    [3, 4],\n",
+    "    [4, 5]\n",
+    "])\n",
+    "\n",
+    "y = np.array([6, 8, 10, 12])\n",
+    "\n",
+    "# Add bias (intercept) term\n",
+    "X_b = np.c_[np.ones((X.shape[0], 1)), X]\n",
+    "\n",
+    "# Normal Equation\n",
+    "beta = np.linalg.inv(X_b.T @ X_b) @ X_b.T @ y\n",
+    "\n",
+    "print(\"Coefficients (Matrix Method):\")\n",
+    "# [intercept, beta1, beta2]\n",
+    "print(beta)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "88a949f3-171e-4155-8eba-9752d8969069",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# User inputs\n",
+    "x1 = eval(input(\"Enter x1: \"))\n",
+    "x2 = eval(input(\"Enter x2: \"))\n",
+    "\n",
+    "# Create feature vector (with bias term)\n",
+    "X_new = np.array([1, x1, x2])   # 1 is for intercept\n",
+    "\n",
+    "print(\"Input Vector:\", X_new)\n",
+    "\n",
+    "# Prediction using matrix multiplication\n",
+    "y_pred = X_new @ beta\n",
+    "\n",
+    "print(\"Predicted Output:\", y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b77332e7-601b-4a2b-b388-cb0e5f013a1c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "1️⃣ Multiple Linear Regression — Matrix Method (Normal Equation)\n",
+    "\n",
+    "📌 Formula\n",
+    "\n",
+    "[\n",
+    "\\hat{\\beta} = (X^T X)^{-1} X^T y\n",
+    "]\n",
+    "\n",
+    "```\n",
+    "[intercept, beta1, beta2]\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    " 2️⃣ Multiple Linear Regression — Gradient Descent\n",
+    "\n",
+    "📌 Formula\n",
+    "\n",
+    "[\n",
+    "\\beta := \\beta - \\alpha \\cdot \\frac{1}{m} X^T(X\\beta - y)\n",
+    "]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "642ae9f5-f361-492a-ba8d-a74acbcb66cb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X = np.array([\n",
+    "    [1, 2],\n",
+    "    [2, 3],\n",
+    "    [3, 4],\n",
+    "    [4, 5]\n",
+    "])\n",
+    "\n",
+    "y = np.array([6, 8, 10, 12])\n",
+    "\n",
+    "i = 1\n",
+    "alpha = 0.0001\n",
+    "\n",
+    "w0 = round(np.random.random(), 2)\n",
+    "w1 = round(np.random.random(), 2)\n",
+    "w2 = round(np.random.random(), 2)\n",
+    "\n",
+    "print(\"Initial Weights:\")\n",
+    "print(\"w0 (Intercept):\", w0)\n",
+    "print(\"w1:\", w1)\n",
+    "print(\"w2:\", w2)\n",
+    "\n",
+    "i = 1\n",
+    "alpha = 0.001\n",
+    "\n",
+    "while i <= 5000:\n",
+    "    \n",
+    "    # Predictions\n",
+    "    yp = w0 + w1 * X[:, 0] + w2 * X[:, 1]\n",
+    "    \n",
+    "    # Cost function (Mean Squared Error)\n",
+    "    j = sum((yp - y) ** 2) / len(y)\n",
+    "    \n",
+    "    if i % 500 == 0:\n",
+    "        print(f\"Iteration {i}, Cost = {j}\")\n",
+    "    \n",
+    "    if j > 0 and j < 0.0001:\n",
+    "        break\n",
+    "    \n",
+    "    # Gradients\n",
+    "    dw0 = (2 / len(y)) * sum(yp - y)\n",
+    "    dw1 = (2 / len(y)) * sum((yp - y) * X[:, 0])\n",
+    "    dw2 = (2 / len(y)) * sum((yp - y) * X[:, 1])\n",
+    "    \n",
+    "    # Update weights\n",
+    "    w0 = w0 - alpha * dw0\n",
+    "    w1 = w1 - alpha * dw1\n",
+    "    w2 = w2 - alpha * dw2\n",
+    "    \n",
+    "    i += 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "40eb8b6c-3f7d-404d-bb8a-e217fcc77660",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Final Weights:\")\n",
+    "print(\"w0 (Intercept):\", w0)\n",
+    "print(\"w1:\", w1)\n",
+    "print(\"w2:\", w2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b304865d-700e-446a-ba89-ccc441605d75",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x1 = eval(input())\n",
+    "x2 = eval(input())\n",
+    "\n",
+    "# Creating the NumPy array\n",
+    "X_new = np.array([x1, x2])\n",
+    "print(X_new)\n",
+    "\n",
+    "y_pred = w0 + w1 * X_new[0] + w2 * X_new[1]\n",
+    "print(\"Predicted Output:\", y_pred)"
    ]
   }
  ],
