--- a/Pipeline 02.ipynb
+++ b/Pipeline 02.ipynb
@@ -13,9 +13,25 @@
     }
    },
    "source": [
-    "##  kNN Classifier, Confusion Matrix- Framingham Data\n",
+    "#  kNN Classifier, Confusion Matrix- Framingham Data\n",
     "\n",
-    "### DUCAT ML Class 4"
+    "**DUCAT ML Class 4**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fb1705a6-7b2f-4c23-a2e9-aa1ac074ed9b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Import Libraries + Data"
    ]
   },
   {
@@ -40,6 +56,22 @@
     "\n",
     "df = pd.read_csv(\"/Workspace/Users/madebypratham@gmail.com/2026_Learning/framingham.csv\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ba4d4353-ef4a-4ed4-8e19-ffbb84e8706d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Null values, Duplicates, Encoding"
    ]
   },
   {
@@ -196,6 +228,22 @@
    "outputs": [],
    "source": [
     "y.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6bdeba6d-fdee-4cd9-bbcf-8141dc048d70",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Model fitting, Evaluation"
    ]
   },
   {
